# websocket_example

./: CMakeLists.txt  README.md  compile.bash
include/foxglove/: CameraCalibration.pb.h  CircleAnnotation.pb.h  Color.pb.h  CompressedImage.pb.h  FrameTransform.pb.h  GeoJSON.pb.h  Grid.pb.h  ImageAnnotations.pb.h  LaserScan.pb.h  LocationFix.pb.h  Log.pb.h  PackedElementField.pb.h  Point2.pb.h  Point3.pb.h  PointCloud.pb.h  PointsAnnotation.pb.h  Pose.pb.h  PoseInFrame.pb.h  PosesInFrame.pb.h  Quaternion.pb.h  RawImage.pb.h  Transform.pb.h  Vector2.pb.h  Vector3.pb.h
include/foxglove/websocket/: server.hpp
include/studio_server/: schema_pb.hpp  utils.hpp
scripts/: compile_proto.py
src/: CMakeLists.txt  studio_server.cpp  utils.cpp
src/foxglove_pb/: CMakeLists.txt  CameraCalibration.pb.cc  CircleAnnotation.pb.cc  Color.pb.cc  CompressedImage.pb.cc  FrameTransform.pb.cc  GeoJSON.pb.cc  Grid.pb.cc  ImageAnnotations.pb.cc  LaserScan.pb.cc  LocationFix.pb.cc  Log.pb.cc  PackedElementField.pb.cc  Point2.pb.cc  Point3.pb.cc  PointCloud.pb.cc  PointsAnnotation.pb.cc  Pose.pb.cc  PoseInFrame.pb.cc  PosesInFrame.pb.cc  Quaternion.pb.cc  RawImage.pb.cc  Transform.pb.cc  Vector2.pb.cc  Vector3.pb.cc
